--- a/ReactJS/chothuexe3/src/css/dn.css
+++ b/ReactJS/chothuexe3/src/css/dn.css
@@ -115,7 +115,7 @@ section{
   .checkbox {
   display: block;
   }
-  .form-tt input[type=submit] {
+  .form-tt button[type=button] {
   font-size: 16px;
   color: #555;
   line-height: 1.2;
@@ -132,7 +132,7 @@ section{
   margin: 30px auto;
   }
 
-  .form-tt input[type=submit]:hover{
+  .form-tt button[type=button]:hover{
     background-color: #242424;
     color: #eee;
   }
